--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
 		"Major": 1,
 		"Minor": 0,
 		"Revision": 0,
-		"Channel": "alpha"
+		"Channel": "release"
 	},
 	"User": {
 		"Username": "ItsTato",
